Bug 41467 - ICE in lto_symtab_prevailing_decl, at lto-symtab.c:727 for 483.xalancbmk
Summary: ICE in lto_symtab_prevailing_decl, at lto-symtab.c:727 for 483.xalancbmk
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: lto (show other bugs)
Version: 4.5.0
: P3 normal
Target Milestone: ---
Assignee: Richard Biener
URL:
Keywords: ice-on-valid-code
Depends on:
Blocks:
 
Reported: 2009-09-25 10:39 UTC by Richard Biener
Modified: 2009-09-29 12:58 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Richard Biener 2009-09-25 10:39:19 UTC
Due to a typo in lto-symtab.c.  I have a fix.
Comment 1 Richard Biener 2009-09-29 12:56:57 UTC
Subject: Bug 41467

Author: rguenth
Date: Tue Sep 29 12:56:29 2009
New Revision: 152274

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=152274
Log:
2009-09-29  Richard Guenther  <rguenther@suse.de>

        PR lto/41467
        * lto-symtab.c (lto_symtab_compatible): Fix typos.

        PR lto/40392
        * langhooks.c (lhd_begin_section): Do not align the section.

        * config/rs6000/rs6000.c (rs6000_output_function_epilogue):
        Handle LTO.

        PR lto/40754
        * lto-elf.c (init_shdr##BITS): Properly specify alignment
        in bytes.
        (first_data_block): New static variable.
        (lto_elf_append_data): Align the first data block in each
        section.

        * lib/torture-options.exp: Do not append an empty option.

Modified:
    branches/lto/gcc/ChangeLog.lto
    branches/lto/gcc/config/rs6000/rs6000.c
    branches/lto/gcc/langhooks.c
    branches/lto/gcc/lto-symtab.c
    branches/lto/gcc/lto/ChangeLog
    branches/lto/gcc/lto/lto-elf.c
    branches/lto/gcc/testsuite/ChangeLog.lto
    branches/lto/gcc/testsuite/lib/torture-options.exp

Comment 2 Richard Biener 2009-09-29 12:58:43 UTC
Fixed.