2009-09-29  Richard Guenther  <rguenther@suse.de>

PR lto/41467
        * lto-symtab.c (lto_symtab_compatible): Fix typos.

        PR lto/40392
        * langhooks.c (lhd_begin_section): Do not align the section.

        * config/rs6000/rs6000.c (rs6000_output_function_epilogue):
        Handle LTO.

        PR lto/40754
        * lto-elf.c (init_shdr##BITS): Properly specify alignment
        in bytes.
        (first_data_block): New static variable.
        (lto_elf_append_data): Align the first data block in each
        section.

        * lib/torture-options.exp: Do not append an empty option.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/lto@152274 138bc75d-0d04-0410-961f-82ee72b054a4